     (Vincent Ladeuil, #59150)

   * Fix selftest semi-random noise during http related tests.
     (Vincent Ladeuil, #140614)

   * Trivial fix for invoking command ``reconfigure`` without arguments.
     (Rob Weir, #141629)

   * ``WorkingTree.rename_one`` will now raise an error if normalisation of the
     new path causes bzr to be unable to access the file. (Robert Collins)

  API BREAKS:

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

   * ``VersionedFile.fix_parents`` has been removed as a harmful API.
     ``VersionedFile.join`` will no longer accept different parents on either
     side of a join - it will either ignore them, or error, depending on the
     implementation. See notes when upgrading for more information.
     (Robert Collins)

  INTERNALS:

   * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing
     duplication from user input, when a user mentions both a path and an item
     contained within that path. (Robert Collins)

   * New method on xml serialisers, write_inventory_to_lines, which matches the
     API used by knits for adding content. (Robert Collins)

   * New helper ``bzrlib.tuned_gzip.bytes_to_gzip`` which takes a byte string
     and returns a gzipped version of the same. This is used to avoid a bunch
     of api friction during adding of knit hunks. (Robert Collins)

   * New parameter yield_parents on ``Inventory.iter_entries_by_dir`` which
     causes the parents of a selected id to be returned recursively, so all the
     paths from the root down to each element of selected_file_ids are