@@ -1907,11 +1907,8 @@ class TestWeaveToKnit(KnitTests):
 
 class TestKnitCaching(KnitTests):
     
-    def create_knit(self, cache_add=False):
+    def create_knit(self):
         k = self.make_test_knit(True)
-        if cache_add:
-            k.enable_cache()
-
         k.add_lines('text-1', [], split_lines(TEXT_1))
         k.add_lines('text-2', [], split_lines(TEXT_2))
         return k
@@ -1919,14 +1916,6 @@ class TestKnitCaching(KnitTests):
     def test_no_caching(self):
         k = self.create_knit()
         # Nothing should be cached without setting 'enable_cache'
-        self.assertEqual({}, k._data._cache)
-
-    def test_cache_add_and_clear(self):
-        k = self.create_knit(True)
-
-        self.assertEqual(['text-1', 'text-2'], sorted(k._data._cache.keys()))
-
-        k.clear_cache()
         self.assertEqual({}, k._data._cache)
 
     def test_cache_data_read_raw(self):
